data/derived/sp14/progs/unify/prog2375.ml.out
Characters 35-48:
  let _ = stringOfList (stringOfList string_of_int) [[1;2;3];[4;5];[6];[]];;
                                     ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type
         (string -> string list -> string) -> 'a -> 'b
       Type int is not compatible with type string -> string list -> string 
